fixed header double scrollbars

--- a/src/components/header-background/HeaderBackground.scss
+++ b/src/components/header-background/HeaderBackground.scss
@@ -6,6 +6,10 @@
   right: 0;
   top: 0;
   bottom: 0;
+  overflow-x: hidden;
+  overflow-y: visible;
+  padding-bottom: 1000px;
+  margin-bottom: -1000px;
 
   @include respond-to-desktop-xl {
     top: -200px;
